--- a/src/css/main.css
+++ b/src/css/main.css
@@ -172,16 +172,15 @@ header .nav--button {
 }
 
 .right-arrow-icon {
-  padding-left: 20px;
+  padding-left: 14px;
 }
 .right-arrow-icon__custom {
-  font-size: 2rem;
+  font-size: 1.2rem;
 }
 
 .showcase-image {
-  padding-top: 10px;
+  margin-top: 20px;
   padding-bottom: 10px;
-  height: 620px;
 }
 
 .partners {
@@ -275,8 +274,14 @@ header .logo,
     padding-top: 40px;
   }
 
+  .right-arrow-icon__custom {
+    font-size: 1.7rem;
+  }
+
   .showcase-image {
     flex-basis: 50%;
+    height: 620px;
+    margin-top: 0;
   }
 
   .partners {
