--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -29,14 +29,14 @@
     padding-left: 20px;
 
     &__custom{
-        font-size: 2rem;
+        font-size: 1.2rem;
     }
 }
 
 .showcase-image{
-    padding-top: 10px;
+    margin-top: 15px;
+    padding-top: 0px;
     padding-bottom: 10px;
-    height: 620px;
 }
 
 
@@ -148,9 +148,20 @@
             padding-top: 40px;
         }
     }
+
+    .right-arrow-icon{
+        padding-left: 20px;
+    
+        &__custom{
+            font-size: 1.7rem;
+        }
+    }
+    
     
     .showcase-image{
+         margin-top: 0px;
         flex-basis: 50%;
+        height: 620px;
     }
 
     .partners{
