--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -26,7 +26,7 @@
 }
 
 .right-arrow-icon{
-    padding-left: 20px;
+    padding-left: 14px;
 
     &__custom{
         font-size: 1.2rem;
@@ -34,7 +34,7 @@
 }
 
 .showcase-image{
-    margin-top: 15px;
+    margin-top: 25px;
     padding-top: 0px;
     padding-bottom: 10px;
 }
@@ -153,13 +153,13 @@
         padding-left: 20px;
     
         &__custom{
-            font-size: 1.7rem;
+            font-size: 1.6rem;
         }
     }
     
     
     .showcase-image{
-         margin-top: 0px;
+         margin-top: 0;
         flex-basis: 50%;
         height: 620px;
     }
